# monero-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/monero-sys/: Cargo.toml  README.md  build.rs
crates/monero-sys/src/: lib.rs
crates/monero-wallet-cli/: Cargo.toml  README.md
crates/monero-wallet-cli/src/: main.rs
